# inject

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
include/inject/: assert.hpp  component.hpp  container.hpp
include/inject/exceptions/: duplicate_registration.hpp  no_registered_component.hpp
src/: CMakeLists.txt
src/exceptions/: duplicate_registration.cpp  no_registered_component.cpp
test/: CMakeLists.txt  container.test.cpp
test/include/fixtures/: trivial_component.hpp
