cmake_minimum_required(VERSION 3.12...3.18)

project(
  Inject
  VERSION 0.1
  DESCRIPTION "Very simply DI lib"
  LANGUAGES CXX)

if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)

  set( CMAKE_CXX_STANDARD 17 )
  set( CMAKE_CXX_STANDARD_REQUIRED ON )
  set( CMAKE_CXX_EXTENSIONS OFF )
  set( CMAKE_EXPORT_COMPILE_COMMANDS ON )

  set_property(GLOBAL PROPERTY USE_FOLDERS ON)

  include(CTest)
endif()

add_subdirectory(src)

if((CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME OR MODERN_CMAKE_BUILD_TESTING)
   AND BUILD_TESTING)
  add_subdirectory(test)
endif()
